test/expected/explain_0f_v-c.out
explain pure virtual void f()
        ^
9: error: "pure": unknown name
